Fix Alignment

--- a/staffstyles.css
+++ b/staffstyles.css
@@ -4,28 +4,28 @@ body {
     text-align: center;
   }
   
-  body h1{
+body h1{
     font-family:Algerian;
-  }
+}
   
-  body{
+body{
     font-family: Calibri;
-  }
+}
   
-  h1 {
+h1 {
     color: black;
-  }
+}
   
-  .header {
+.header {
     background-image: url(/background.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-origin: border-box;
     height: 500px;
     border: 2px solid black;
-  }
+}
   
-  .header h1 { 
+.header h1 { 
     font-size: 45px; 
     font-style: normal; 
     font-variant: normal; 
@@ -110,4 +110,9 @@ body {
   div .footer p {
     background-color: darkgray;
     color: white;
+  }
+
+  div .bioLeftAlign {
+    text-align: left;
+    float: left;
   }
